// =========================================================
// Early Warning System (EWS) - Database ERD
// Project   : Top FIK x EWS (be_ews_r)
// Source    : sti_api.sql + EWS migrations
// Generated : dbdiagram.io compatible DBML
//
// Catatan: Field yang ditandai [note: '+EWS'] adalah kolom
// yang ditambahkan oleh migrasi EWS dan belum ada di sti_api.sql
// =========================================================

// ---------------------------------------------------------
// CORE — Tabel yang sudah ada di sti_api.sql
// ---------------------------------------------------------

Table users {
  id          bigint       [pk, increment]
  name        varchar(255)
  email       varchar(255) [unique]
  email_verified_at timestamp [null]
  password    varchar(255)
  access_token  longtext   [null]
  refresh_token longtext   [null]
  fcm_token   longtext     [null]
  bo_token    longtext     [null]
  remember_token varchar(100) [null]
  created_at  timestamp    [null]
  updated_at  timestamp    [null]
  deleted_at  timestamp    [null]
  prodi_id    bigint       [null, note: 'FK ke prodis']

  Note: 'Akun pengguna sistem (mahasiswa, dosen, admin, dll)'
}

Table prodis {
  id          bigint       [pk, increment]
  nama        varchar(255)
  kode_prodi  varchar(255)
  created_at  timestamp    [null]
  updated_at  timestamp    [null]
  deleted_at  timestamp    [null]

  Note: 'Program Studi — A11, A12, A14, A15'
}

Table dosen {
  id                bigint       [pk, increment]
  user_id           bigint       [not null]
  prodi_id          bigint       [null, note: '+EWS — FK ke prodis']
  gelar_depan       varchar(255) [null]
  gelar_belakang    varchar(255) [null]
  npp               varchar(255) [not null, unique]
  bidang_kajian     "enum('SC','RPLD','SK3D')" [null]
  status_dosen      "enum('Aktif','Studi Lanjut','Pejabat','Struktural','Baru','Luar Prodi')" [null]
  jumlah_lulusan    int          [default: 0]
  lulus_persen      decimal(5,2) [default: 0.00]
  total_mhs_ta      int          [default: 0]
  total_mhs_saat_ini int         [default: 0]
  kuota_ta_baru     int          [default: 0]
  scholar_link      varchar(255) [null]
  telepon           varchar(255) [null]
  ttd               varchar(255) [null]
  created_at        timestamp    [null]
  updated_at        timestamp    [null]
  deleted_at        timestamp    [null]

  Note: 'Data dosen — bidang kajian & statistik TA dikelola di sini'
}

Table mahasiswa {
  id                bigint       [pk, increment]
  user_id           bigint       [null]
  prodi_id          bigint       [null, note: '+EWS — FK ke prodis']
  nim               varchar(255) [unique]
  telepon           varchar(255) [null]
  transkrip         varchar(255) [null]
  minat             varchar(255) [null, note: '+EWS']
  cuti_2            "enum('yes','no')" [default: 'no', note: '+EWS — pernah cuti 2x']
  tanggal_yusidium  date         [null]
  status_mahasiswa  "enum('lulus','aktif','mangkir','tidak_aktif','cuti','DO')" [default: 'aktif', note: '+EWS — ditambah cuti & DO']
  created_at        timestamp    [null]
  updated_at        timestamp    [null]
  deleted_at        timestamp    [null]

  Note: 'Data mahasiswa. sks & ipk dipindah ke akademik_mahasiswa'
}

Table mata_kuliah_peminatans {
  id          bigint       [pk, increment]
  peminatan   varchar(255)
  prodi_id    bigint       [null, note: '+EWS — FK ke prodis']
  created_at  timestamp    [null]
  updated_at  timestamp    [null]

  Note: 'Kelompok peminatan (bidang studi khusus)'
}

Table mata_kuliahs {
  id              bigint       [pk, increment]
  prodi_id        bigint       [not null, note: '+EWS — FK ke prodis']
  kode            varchar(255) [unique]
  name            varchar(255)
  koordinator_mk  bigint       [null, note: '+EWS — FK ke dosen']
  sks             int
  semester        int          [null]
  tipe_mk         "enum('nasional','fakultas','prodi','peminatan')" [default: 'prodi', note: '+EWS']
  peminatan_id    bigint       [null]
  created_at      timestamp    [null]
  updated_at      timestamp    [null]

  Note: 'Mata kuliah master — tipe dan koordinator dikelola EWS'
}

Table error_logs {
  id          bigint       [pk, increment]
  user_id     varchar(255) [null]
  method      varchar(255)
  url         varchar(255)
  message     text
  trace       text         [null]
  payload     json         [null]
  created_at  timestamp    [null]
  updated_at  timestamp    [null]

  Note: 'Log error sistem untuk debugging API'
}

// ---------------------------------------------------------
// EWS — Tabel baru yang dibuat oleh migrasi EWS
// ---------------------------------------------------------

Table kelompok_mata_kuliah {
  id                bigint       [pk, increment]
  mata_kuliah_id    bigint       [not null]
  kode              varchar(255)
  dosen_pengampu_id bigint       [not null]
  created_at        timestamp    [null]
  updated_at        timestamp    [null]

  Note: 'Kelas per mata kuliah — satu MK bisa punya beberapa kelompok'
}

Table akademik_mahasiswa {
  id                    bigint       [pk, increment]
  mahasiswa_id          bigint       [not null]
  dosen_wali_id         bigint       [not null]
  semester_aktif        int          [default: 1]
  tahun_masuk           year         [null]
  ipk                   decimal(3,2) [null]
  mk_nasional           "enum('yes','no')" [default: 'no']
  mk_fakultas           "enum('yes','no')" [default: 'no']
  mk_prodi              "enum('yes','no')" [default: 'no']
  sks_tempuh            int          [null]
  sks_now               int          [null]
  sks_lulus             int          [null]
  sks_gagal             int          [null]
  nilai_d_melebihi_batas "enum('yes','no')" [default: 'no']
  nilai_e               "enum('yes','no')" [default: 'no']
  created_at            timestamp    [null]
  updated_at            timestamp    [null]

  Note: 'Rekap akademik per mahasiswa — indikator kelulusan MK wajib'
}

Table ips_mahasiswa {
  id           bigint       [pk, increment]
  mahasiswa_id bigint       [not null]
  ips_1        decimal(4,2) [null]
  ips_2        decimal(4,2) [null]
  ips_3        decimal(4,2) [null]
  ips_4        decimal(4,2) [null]
  ips_5        decimal(4,2) [null]
  ips_6        decimal(4,2) [null]
  ips_7        decimal(4,2) [null]
  ips_8        decimal(4,2) [null]
  ips_9        decimal(4,2) [null]
  ips_10       decimal(4,2) [null]
  ips_11       decimal(4,2) [null]
  ips_12       decimal(4,2) [null]
  ips_13       decimal(4,2) [null]
  ips_14       decimal(4,2) [null]
  created_at   timestamp    [null]
  updated_at   timestamp    [null]

  Note: 'IPS per semester — maks 14 semester'
}

Table khs_krs_mahasiswa {
  id                  bigint       [pk, increment]
  mahasiswa_id        bigint       [not null]
  matakuliah_id       bigint       [not null]
  kelompok_id         bigint       [not null]
  semester_ambil      int          [null]
  status              "enum('B','U')" [note: 'B=Baru, U=Ulang']
  absen               int          [null]
  nilai_uts           int          [null]
  nilai_uas           int          [null]
  nilai_akhir_angka   int          [null]
  nilai_akhir_huruf   varchar(5)   [null]
  created_at          timestamp    [null]
  updated_at          timestamp    [null]

  Note: 'KHS/KRS — riwayat pengambilan dan nilai mata kuliah mahasiswa'
}

Table early_warning_system {
  id                    bigint       [pk, increment]
  akademik_mahasiswa_id bigint       [not null]
  status                "enum('tepat_waktu','normal','perhatian','kritis')" [default: 'tepat_waktu']
  status_kelulusan      varchar(50)  [null]
  SPS1                  "enum('yes','no')" [default: 'no', note: 'Semester Pertama Studi']
  SPS2                  "enum('yes','no')" [default: 'no', note: 'Semester Kedua Studi']
  SPS3                  "enum('yes','no')" [default: 'no', note: 'Semester Ketiga Studi']
  created_at            timestamp    [null]
  updated_at            timestamp    [null]

  Note: 'Status EWS per mahasiswa — tepat_waktu | normal | perhatian | kritis'
}

Table tindak_lanjuts {
  id                bigint       [pk, increment]
  id_ews            bigint       [not null]
  kategori          "enum('rekomitmen','pindah_prodi')"
  link              varchar(255) [null]
  status            "enum('belum_diverifikasi','telah_diverifikasi')" [default: 'belum_diverifikasi']
  tanggal_pengajuan datetime     [null]
  created_at        timestamp    [null]
  updated_at        timestamp    [null]

  Note: 'Tindak lanjut EWS — mahasiswa mengajukan rekomitmen atau pindah prodi'
}

// ---------------------------------------------------------
// RELATIONSHIPS
// ---------------------------------------------------------

// users ↔ prodis
Ref: users.prodi_id > prodis.id [delete: set null]

// users → dosen / mahasiswa
Ref: dosen.user_id > users.id [delete: cascade]
Ref: mahasiswa.user_id > users.id [delete: set null]

// prodis → dosen / mahasiswa / mk_peminatan / mata_kuliahs
Ref: dosen.prodi_id > prodis.id [delete: set null]
Ref: mahasiswa.prodi_id > prodis.id [delete: set null]
Ref: mata_kuliah_peminatans.prodi_id > prodis.id [delete: cascade]
Ref: mata_kuliahs.prodi_id > prodis.id [delete: cascade]

// mata_kuliahs
Ref: mata_kuliahs.koordinator_mk > dosen.id [delete: set null]
Ref: mata_kuliahs.peminatan_id > mata_kuliah_peminatans.id [delete: set null]

// kelompok_mata_kuliah
Ref: kelompok_mata_kuliah.mata_kuliah_id > mata_kuliahs.id [delete: cascade]
Ref: kelompok_mata_kuliah.dosen_pengampu_id > dosen.id [delete: cascade]

// akademik_mahasiswa
Ref: akademik_mahasiswa.mahasiswa_id > mahasiswa.id [delete: cascade]
Ref: akademik_mahasiswa.dosen_wali_id > dosen.id [delete: cascade]

// ips_mahasiswa
Ref: ips_mahasiswa.mahasiswa_id > mahasiswa.id [delete: cascade]

// khs_krs_mahasiswa
Ref: khs_krs_mahasiswa.mahasiswa_id > mahasiswa.id [delete: cascade]
Ref: khs_krs_mahasiswa.matakuliah_id > mata_kuliahs.id [delete: cascade]
Ref: khs_krs_mahasiswa.kelompok_id > kelompok_mata_kuliah.id [delete: cascade]

// early_warning_system
Ref: early_warning_system.akademik_mahasiswa_id > akademik_mahasiswa.id [delete: cascade]

// tindak_lanjuts
Ref: tindak_lanjuts.id_ews > early_warning_system.id [delete: cascade]
